New post, some design improvements, new Portfolio section

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about.html">About</a><a class="page-link" href="/music.html">Music</a></div>
+        <div class="trigger"><a class="page-link" href="/about.html">About</a><a class="page-link" href="/portfolio.html">Portfolio</a><a class="page-link" href="/music.html">Music</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -153,8 +153,16 @@ technologies and I’m able to learn new ones quickly.</p>
 
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      © 2018−2019 Roman "Megus" Petrov.<br />
-      <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
+      <div class="footer-col">
+        © 2018−2019 Roman “Megus” Petrov.<br />
+        <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
+      </div>
+      <div class="footer-col">
+        <a href="https://twitter.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a>
+        <a href="https://www.facebook.com/sugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="/assets/minima-social-icons.svg#facebook"></use></svg></a>
+        <a href="https://github.com/Megus"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a>
+        <a href="https://www.youtube.com/user/megussugem"><svg viewbox="0 0 16 16" class="social-icon"><use xlink:href="/assets/minima-social-icons.svg#youtube"></use></svg></a>    
+      </div>
     </div>
   </div>
 
