--- a/music.html
+++ b/music.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="utf-8">
+<html lang="en"><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-104711057-2"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+  	gtag('config', 'UA-104711057-2');
+	</script><meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="/assets/favicon-96x96.png"><!-- Begin Jekyll SEO tag v2.5.0 -->
@@ -10,13 +16,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Personal website of Roman “Megus” Petrov" />
 <meta property="og:description" content="Personal website of Roman “Megus” Petrov" />
-<link rel="canonical" href="http://localhost:4000/music.html" />
-<meta property="og:url" content="http://localhost:4000/music.html" />
+<link rel="canonical" href="https://megus.org/music.html" />
+<meta property="og:url" content="https://megus.org/music.html" />
 <meta property="og:site_name" content="Megus" />
 <script type="application/ld+json">
-{"description":"Personal website of Roman “Megus” Petrov","author":{"@type":"Person","name":"Megus"},"@type":"WebPage","url":"http://localhost:4000/music.html","headline":"Music","@context":"http://schema.org"}</script>
+{"description":"Personal website of Roman “Megus” Petrov","author":{"@type":"Person","name":"Megus"},"@type":"WebPage","url":"https://megus.org/music.html","headline":"Music","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Megus" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://megus.org/feed.xml" title="Megus" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><img class="site-logo" src="/assets/megus.png" />
