--- a/music.html
+++ b/music.html
@@ -14,13 +14,13 @@
 <meta property="og:title" content="Music" />
 <meta name="author" content="Megus" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="Personal website of Roman “Megus” Petrov" />
-<meta property="og:description" content="Personal website of Roman “Megus” Petrov" />
+<meta name="description" content="Personal website of Roman “Megus” Petrov, a programmer and a musician." />
+<meta property="og:description" content="Personal website of Roman “Megus” Petrov, a programmer and a musician." />
 <link rel="canonical" href="https://megus.org/music.html" />
 <meta property="og:url" content="https://megus.org/music.html" />
 <meta property="og:site_name" content="Megus" />
 <script type="application/ld+json">
-{"description":"Personal website of Roman “Megus” Petrov","author":{"@type":"Person","name":"Megus"},"@type":"WebPage","url":"https://megus.org/music.html","headline":"Music","@context":"http://schema.org"}</script>
+{"description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","author":{"@type":"Person","name":"Megus"},"@type":"WebPage","url":"https://megus.org/music.html","headline":"Music","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://megus.org/feed.xml" title="Megus" /></head>
 <body><header class="site-header" role="banner">
@@ -79,7 +79,7 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        © 2018−2019 Roman “Megus” Petrov.<br />
+        © Roman “Megus” Petrov.<br />
         <a class="u-email" href="mailto:megus.sugem@gmail.com">megus.sugem@gmail.com</a>
       </div>
       <div class="footer-col">
