The first article about Virtual Megus

--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
 <meta name="twitter:site" content="@sugem" />
 <meta name="twitter:creator" content="@sugem" />
 <script type="application/ld+json">
-{"description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebPage","url":"https://megus.org/music.html","headline":"Music","@context":"http://schema.org"}</script>
+{"url":"https://megus.org/music.html","headline":"Music","description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://megus.org/feed.xml" title="Megus" /></head>
 <body><header class="site-header" role="banner">
