--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta property="og:url" content="https://megus.org/" />
 <meta property="og:site_name" content="Megus" />
 <meta property="og:image" content="https://megus.org/assets/megus-photo.jpg" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@sugem" />
 <meta name="twitter:creator" content="@sugem" />
 <script type="application/ld+json">
