--- a/about.html
+++ b/about.html
@@ -19,15 +19,16 @@
 <link rel="canonical" href="https://megus.org/about.html" />
 <meta property="og:url" content="https://megus.org/about.html" />
 <meta property="og:site_name" content="Megus" />
-<meta name="twitter:card" content="summary" />
+<meta property="og:image" content="https://megus.org/assets/social-general.png" />
+<meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@sugem" />
 <meta name="twitter:creator" content="@sugem" />
 <script type="application/ld+json">
-{"url":"https://megus.org/about.html","headline":"About","description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebPage","@context":"http://schema.org"}</script>
+{"url":"https://megus.org/about.html","headline":"About","image":"https://megus.org/assets/social-general.png","description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://megus.org/feed.xml" title="Megus" /></head>
 <body><header class="site-header" role="banner">
-  <div class="site-header-wrapper"><a href="/"><img class="site-logo" src="/assets/megus.png" />
+  <div class="site-header-wrapper"><a href="/"><img class="site-logo" src="/assets/megus-logo-circle.png" />
     <span class="site-title" rel="author">Megus</span></a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
