--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="twitter:site" content="@sugem" />
 <meta name="twitter:creator" content="@sugem" />
 <script type="application/ld+json">
-{"url":"https://megus.org/","headline":"Megus","image":"https://megus.org/assets/social-general.png","name":"Megus","description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebSite","@context":"http://schema.org"}</script>
+{"url":"https://megus.org/","name":"Megus","headline":"Megus","image":"https://megus.org/assets/social-general.png","description":"Personal website of Roman “Megus” Petrov, a programmer and a musician.","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://megus.org/feed.xml" title="Megus" /></head>
 <body><header class="site-header" role="banner">
