Yet Another Day released

--- a/index.html
+++ b/index.html
@@ -67,14 +67,31 @@
   <main class="page-content" aria-role="main">
     <div class="home">
       <p class="headline">
-        Chiptune, retrowave, funk
+        Retrowave, synthwave, chiptune, funk
       </p>
       <p class="announcement">
-        New album “Yet Another Day” coming out in October!
+        New album <a href="/music/yet-another-day">Yet Another Day</a> is out!
       </p>
-      <div class="youtube">
-        <iframe src="https://www.youtube.com/embed/dlx93j02Cww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-      </div>
+
+      
+        <div class="streaming-links">
+  
+  
+    <a href="https://megus.bandcamp.com/album/yet-another-day"><img src="/img/streaming-icons/bandcamp.png" alt="Yet Another day on Bandcamp" class="streaming-icon"></a>
+  
+  
+    <a href="https://open.spotify.com/album/6AePYLrw0q9SWI8Zv0ksso"><img src="/img/streaming-icons/spotify.svg" alt="Yet Another day on Spotify" class="streaming-icon"></a>
+  
+  
+    <a href="https://music.apple.com/ca/album/yet-another-day-ep/1709746833"><img src="/img/streaming-icons/apple-music.svg" alt="Yet Another day on Apple Music" class="streaming-icon"></a>
+  
+  
+    <a href="https://music.youtube.com/playlist?list=OLAK5uy_nryLKiwhXaQqzeG-SM2Ex4K1Pa80f9Pwk"><img src="/img/streaming-icons/youtube-music.svg" alt="Yet Another day on YouTube Music" class="streaming-icon"></a>
+  
+  
+</div>
+
+      
 
       <div class="home-social-links">
         <h2>Follow Megus</h2>
