Added Ubiktune link

--- a/music/yet-another-day/index.html
+++ b/music/yet-another-day/index.html
@@ -118,6 +118,7 @@
 <p>Composed, recorded, and mixed by Megus<br>
 Artwork by <a href="https://www.instagram.com/pinkrozezzz/">Pink Rozezzz</a><br>
 Mastered by <a href="https://mmcm.ru">Sergey Kosov</a></p>
+<p>Released on <a href="https://ubiktune.com/releases/megus-yet-another-day">Ubiktune</a></p>
 
     </div>
   </main>
