Amazon Music link for Yet Another Day

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
     <a href="https://music.youtube.com/playlist?list=OLAK5uy_nryLKiwhXaQqzeG-SM2Ex4K1Pa80f9Pwk"><img src="/img/streaming-icons/youtube-music.svg" alt="Yet Another day on YouTube Music" class="streaming-icon"></a>
   
   
+    <a href="https://www.amazon.com/music/player/albums/B0CK5B7LNG"><img src="/img/streaming-icons/amazon-music.svg" alt="Yet Another day on Amazon Music" class="streaming-icon"></a>
+  
 </div>
 
       
